# rust-todo

./: Cargo.toml  docker-compose.yml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/entities/: mod.rs  prelude.rs  todo.rs
src/graphql/: mutation.rs  query.rs
src/graphql/subscription/: mod.rs
src/routes/: graphiql.rs  mod.rs
